INTERLOK-293 Standardised the manifest file. INTERLOK-293 #time 1h 30m
Added in a macrodef that contains a standard manifest file which includes
the Implementation-Version, but no additional sections.
Made all sub-components call adapter:create-manifest when where they
were creating a manifest file.

The sections were being mixed up anyway because of the signing aspect
and makes no sense now that we have pretty much a single jar for a
single component.

--- a/build.xml
+++ b/build.xml
@@ -9,9 +9,6 @@
 
   <target name="init">
 
-    <property name="manifest.section.name" value="com/adaptris/core/varsub"/>
-    <property name="manifest.title" value="Interlok Adapter Registry with variable substitution support"/>
-    <property name="manifest.vendor" value="Adaptris Ltd"/>
     <property name="ivy.publish.revision" value="3.0-SNAPSHOT"/>  <!-- Version number of this artifact -->
     <property name="adp-core-version" value="3.0-SNAPSHOT"/>
 
@@ -83,20 +80,7 @@
 
   <target name="jar.resources" depends="prepare">
     <!-- build the manifest file -->
-    <property name="manifest.jar.version" value="${jar.version}"/>
-    <manifest file="${build.dir}/Manifest.mf">
-      <attribute name="Manifest-Version" value="1.0"/>
-      <attribute name="Build-Version" value="${manifest.jar.version}"/>
-      <attribute name="Built-By" value="${user.name}"/>
-      <section name="${manifest.section.name}">
-        <attribute name="Specification-Title" value="${manifest.title}"/>
-        <attribute name="Specification-Version" value="${ivy.publish.revision}"/>
-        <attribute name="Specification-Vendor" value="${manifest.vendor}"/>
-        <attribute name="Implementation-Version" value="${ivy.publish.revision}"/>
-        <attribute name="Implementation-Title" value="${manifest.title}"/>
-        <attribute name="Implementation-Vendor" value="${manifest.vendor}"/>
-      </section>
-    </manifest>
+    <adapter:create-manifest file="${build.dir}/Manifest.mf" title="Interlok Adapter Registry with variable substitution support"/>
   </target>
 
 
