--- a/test/resources/unit-tests.properties.template
+++ b/test/resources/unit-tests.properties.template
@@ -1,2 +1,2 @@
 junit.varsub.variables.adapter.xml=${test.data.dir}/variables-adapter.xml
-junit.varsub.variables.properties=${test.data.dir}/sample-variable-substitutions.properties
+junit.varsub.variables.properties=file:///${test.data.dir}/sample-variable-substitutions.properties
