INTERLOK-323 - Added in an XStreamMarshaller implementation. INTERLOK-323 #time 5h
Added a new Processor() class to abstract away the actual replacements
so that both VarSubPreProcessor + Marshaller can use it.

Made VariableSubstitutionImplFactory enum just create the substituter
rather than being configurable and doing the actual substitution. I'd
think that it possibly isn't thread safe if you have multiple
XStreamMarshaller instances accessing it.

Added tests / made some classes package level only (they don't need to
be public, so they can get obfuscated).

Updated jacoco to 0.7.2 to see if it fixes issues with the static use
of ExceptionHelpers; it doesn't but, it still works.

--- a/test/resources/var-sub/sample-variable-substitutions.properties
+++ b/test/resources/var-sub/sample-variable-substitutions.properties
@@ -1,4 +1,5 @@
 adapter.id=MyAdapterID
 channel.id=MyChannelID
+channel.alternate.id=AnotherChannelId
 workflow.id1=MyWorkflowID1
 workflow.id2=MyWorkflowID2
