INTERLOK-345 Fixed crappy adaptris-version files INTERLOK-345 #time 1h
From previous refactoring all the adaptris-version files were left with
${manifest.title}=3.0-SNAPSHOT... This is now fixed.

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,8 @@
 
     <property name="ivy.publish.revision" value="3.0-SNAPSHOT"/>  <!-- Version number of this artifact -->
     <property name="adp-core-version" value="3.0-SNAPSHOT"/>
-
+    <property name="manifest.title" value="Interlok Config Pre-Processor: variable substitution support"/>
+    
     <property name="src.dir" value="${basedir}/src"/>
     <property name="build-util.lib.dir"     value="${basedir}/../build-util"/>
 
@@ -86,12 +87,12 @@
 
   <target name="jar.resources" depends="prepare">
     <!-- build the manifest file -->
-    <adapter:create-manifest file="${build.dir}/Manifest.mf" title="Interlok Adapter Registry with variable substitution support"/>
+    <adapter:create-manifest file="${build.dir}/Manifest.mf" title="${manifest.title}"/>
   </target>
 
 
   <target name="jar" depends="compile, jar.resources" description="Build a jar file">
-    <adapter:create-jar basedir="${classes.build.dir}" jarfile="${project.dist.dir}/${project.jar.name}" manifest="${build.dir}/Manifest.mf" />
+    <adapter:create-jar basedir="${classes.build.dir}" jarfile="${project.dist.dir}/${project.jar.name}" manifest="${build.dir}/Manifest.mf" version-title="${manifest.title}"/>
   </target>
 
 
