INTERLOK-391 Added env-var and sys-prop preProcessors INTERLOK-391 #time 2h
Added initial version for environment and system property pre-processors
They are configured in the same way as the var-sub (in the sense you
can control the prefix/suffix) but have no other configuration. They
are transparent so "${java.home}" refers to the system property
"java.home" and "${PATH}" will refer to the environment variable "PATH".

Added some tests. Tests should use the PATH env which should exist on
both Unix + Windows.

--- a/test/resources/unit-tests.properties.template
+++ b/test/resources/unit-tests.properties.template
@@ -1,2 +1,4 @@
 junit.varsub.variables.adapter.xml=${test.data.dir}/variables-adapter.xml
 junit.varsub.variables.properties=file:///${test.data.dir}/sample-variable-substitutions.properties
+junit.varsub.sysprop.adapter.xml=${test.data.dir}/sysprops-adapter.xml
+junit.varsub.environment.adapter.xml=${test.data.dir}/environment-adapter.xml
