--- a/ivy.xml
+++ b/ivy.xml
@@ -31,12 +31,12 @@
     <dependency org="com.adaptris" name="adp-core-apt" rev="${adp-core-version}" conf="compile->default;ant->default" changing="true"/>
 
     <dependency org="org.apache.velocity" name="velocity" rev="1.7" transitive="false" conf="compile->default"/>
-    <dependency org="org.slf4j" name="slf4j-api" rev="1.7.5" conf="compile->default" />
-    <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.7.5" conf="compile->default" />
-    <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.5" conf="compile->default"/>
+    <dependency org="org.slf4j" name="slf4j-api" rev="1.7.12" conf="compile->default" />
+    <dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.7.12" conf="optional->default" />
+    <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.12" conf="optional->default"/>
+    <dependency org="log4j" name="log4j" rev="1.2.17" force="true" conf="test->default;ant->default"/>
 
     <dependency org="junit" name="junit" rev="4.11" conf="test->default"/>
-    <dependency org="log4j" name="log4j" rev="1.2.17" conf="runtime->default"/>
     <dependency org="org.mockito" name="mockito-all" rev="1.9.5" conf="test->default"/>
 
 
