INTERLOK-773 #comment Excluded c3p0 from interlok-opt. INTERLOK-773 #time 5m

--- a/ivy.xml
+++ b/ivy.xml
@@ -51,6 +51,7 @@
 
     <exclude org="ch.qos.logback" artifact="logback-classic"/>
     <exclude org="ch.qos.logback" artifact="logback-core"/>
+    <exclude org="c3p0"/>
     <exclude org="commons-logging"/>
     <exclude org="org.apache.ant" artifact="ant"/>
     <exclude org="org.apache.ant" artifact="ant-launcher"/>
