INTERLOK-1011 Migrate HG to GIT
INTERLOK-1011 #time 5m

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 ﻿<project basedir="." default="compile" name="varsub" xmlns:adapter="uri:adapter" xmlns:ivy="antlib:org.apache.ivy.ant">
   <property file="build.properties"/>
   <property file="ivy.properties"/>
-  <import file="${basedir}/../resources/ant-ivy-includes.xml"/> <!-- Ivy tasks -->
+  <import file="${basedir}/ivy/ant-ivy-includes.xml"/> <!-- Ivy tasks -->
 
   <tstamp>
     <format property="today" pattern="yyyy-MM-dd" locale="en"/>
