--- a/build.xml
+++ b/build.xml
@@ -9,8 +9,8 @@
 
   <target name="init">
 
-    <property name="ivy.publish.revision" value="3.7-SNAPSHOT"/>  <!-- Version number of this artifact -->
-    <property name="adp-core-version" value="3.7-SNAPSHOT"/>
+    <property name="ivy.publish.revision" value="3.8-SNAPSHOT"/>  <!-- Version number of this artifact -->
+    <property name="interlok-core-version" value="3.8-SNAPSHOT"/>
     <property name="manifest.title" value="Interlok Config Pre-Processor: variable substitution support"/>
     
     <property name="src.dir" value="${basedir}/src"/>
@@ -47,7 +47,7 @@
 
     <property name="build.tmp.dir" value="${build.dir}/tmp"/>
     <property name="jar.version"            value="${today}-${user.name}"/>
-    <property name="project.name"           value="adp-${ant.project.name}"/>
+    <property name="project.name"           value="interlok-${ant.project.name}"/>
 
     <property name="project.dist.dir" value="${build.dir}/dist"/>
     <property name="project.jar.name" value = "${project.name}.jar"/>
