INTERLOK-3187 #comment Add repository location to the pom file

--- a/build.gradle
+++ b/build.gradle
@@ -241,6 +241,7 @@ publishing {
         properties.appendNode("target", "3.8.0+")
         properties.appendNode("tags", "xinclude,xslt,environment,system-properties,variables")
         properties.appendNode("license", "false")
+        properties.appendNode("repository", "https://github.com/adaptris/interlok-variable-substitution")
       }
     }
   }
