--- a/build.gradle
+++ b/build.gradle
@@ -216,8 +216,8 @@ javadoc {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required= true
+        html.required= true
     }
 }
 
