--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
   id 'nebula.optional-base' version '6.0.0'
   id 'com.github.spotbugs' version '4.7.3'
   id 'org.owasp.dependencycheck' version '6.3.1'
-  id "io.freefair.lombok" version "5.3.3.3"
+  id "io.freefair.lombok" version "6.1.0"
 }
 ext {
   interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '4.3-SNAPSHOT'
@@ -62,7 +62,7 @@ group   = 'com.adaptris'
 version = releaseVersion
 def versionDir = "$buildDir/version"
 def testDataDir = new File(project.buildDir, "testdata")
-generateLombokConfig.enabled = false
+lombok.disableConfig = true
 
 // Disable gradle module generation since we probably don't want
 // xxx.module files in your repository.
