INTERLOK-4104 Uprade to Junit 5
Upgrade gradle wrapper to 7.6.1

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
   id 'org.owasp.dependencycheck' version '8.2.1'
   id "io.freefair.lombok" version "6.5.1"
 }
+
 ext {
   interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '5.0-SNAPSHOT'
   releaseVersion = project.findProperty('releaseVersion') ?: '5.0-SNAPSHOT'
@@ -29,7 +30,7 @@ ext {
   componentDesc="SystemProperty / Environment / Variable substitution Config Pre-processors"
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
-  slf4jVersion = '2.0.3'
+  slf4jVersion = '2.0.7'
   mockitoVersion = '4.9.0'
 }
 
@@ -56,8 +57,8 @@ ext.buildInfo = { ->
     }
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 group   = 'com.adaptris'
 version = releaseVersion
 def versionDir = "$buildDir/version"
@@ -92,7 +93,6 @@ repositories {
   maven { url "$nexusBaseUrl/content/groups/interlok" }
 }
 
-
 configurations {
   javadoc {}
   offlineJavadocPackages {}
@@ -125,7 +125,7 @@ dependencies {
 
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") {changing= true}
 
-  testImplementation ('junit:junit:4.13.2')
+  testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.9.3")
   testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
   testImplementation ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true }
   testImplementation ("org.mockito:mockito-core:$mockitoVersion")
@@ -134,10 +134,7 @@ dependencies {
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
   offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar") { changing= true}
   offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar") { changing= true}
-
-
 }
-
 
 jar {
   manifest {
@@ -149,7 +146,6 @@ jar {
                "Implementation-Vendor": organizationName)
   }
 }
-
 
 sourceSets {
   main {
@@ -203,9 +199,9 @@ task copyUnitTestProperties() {
 }
 
 task copyTestData(type: Copy) {
-    from file('src/test/resources/var-sub')
-    into (testDataDir)
-    filter(ReplaceTokens, tokens: [TEST_DATA_DIR: testDataDir.getCanonicalPath().replaceAll("\\\\", "/")])
+  from file('src/test/resources/var-sub')
+  into (testDataDir)
+  filter(ReplaceTokens, tokens: [TEST_DATA_DIR: testDataDir.getCanonicalPath().replaceAll("\\\\", "/")])
 }
 
 task deleteGeneratedFiles(type: Delete) {
@@ -224,10 +220,10 @@ javadoc {
 }
 
 jacocoTestReport {
-    reports {
-        xml.required= true
-        html.required= true
-    }
+  reports {
+    xml.required= true
+    html.required= true
+  }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -236,8 +232,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.extensions.delombokTask
+  classifier = 'sources'
+  from sourceSets.main.extensions.delombokTask
 }
 
 artifacts {
@@ -304,9 +300,12 @@ dependencyCheck  {
   }
 }
 
+test {
+  useJUnitPlatform()
+}
+
 // disable spotbugsTests which checks our test code..
 spotbugsTest.enabled = false
-
 
 check.dependsOn jacocoTestReport
 processTestResources.dependsOn copyUnitTestProperties, copyTestData
